#54 Modularize FXyz subprojects - Add module-info to all subprojects - Use Level 1.9 in all subprojects - Added jlink plugin - Update readme